--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+<h1>jabuti</h1>
 
+<p>Jaboti foi um distrito subordinado a Tomazina, conforme a lei estadual <strong> n.º 1.110, de 19 de março de 1912,</strong> e se emancipou em 10 de abril de 1929, graças à lei estadual nº 2.645.</p>
+<p>O novo município, no entanto, seria extinto por força do decreto n.º 106, de 22 de janeiro de 1934, que restituiu seu território ao de Tomazina.</p>
+<p>Essa condição se manteve até <strong> 14 de novembro de 1951,</strong> quando a lei estadual n.º 790 transferiu seu território para o recém-criado município de Japira.
+Somente em <em>26 de novembro de 1954 Jaboti recuperaria sua emancipação,</em> graças à lei estadual n.º 253, que o desmembrou de Japira.</p>
